KSCM-1898 - Fixed alignment issues with outcome.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@67902 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -458,4 +458,10 @@
 .course_review_details-table .uif-gridLayout th[scope="row"] {
     padding-top: 5px;
 }
+
+#course_review_outcome_details .uif-gridLayout td {
+  padding-top: 5px;
+}
+
+
 /* End */
